--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,28 @@
-title: Time Machine theme
-description: Time Machine is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
-theme: jekyll-theme-time-machine
+name: YourName
+permalink: :year/:month/:day/:title
+baseurl: /jekyll-theme-diary
+
+# Your blog's start year and this year, showed in the footer left
+# start is optional
+start: 2017
+now: 2019
+ 
+# Social links showed in the footer
+# You just need modify the nickname of github and twitter
+link:
+  email : yourname@gmail.com
+  github : yourname
+  twitter : yourname
+
+# Links in the navigation, you can modify both link name and link url
+nav:
+   Home: "/"
+   Diary: "/diary"
+
+   
+markdown: kramdown
+highlighter: rouge
+
+sass:
+  sass_dir: _sass
+  style: compressed
