--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author:
 description: > # this means to ignore newlines until "show_excerpts:"
   Live in the moment
 
-show_excerpts: false # set to true to show excerpts on the homepage
+show_excerpts: true # set to true to show excerpts on the homepage
 
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -56,3 +56,7 @@ theme: minima
 plugins:
  - jekyll-feed
  - jekyll-seo-tag
+
+header_pages:
+  - about.md
+#- portfolio.md
